assets/css/style.css
/* ... */
#resumeRowFive {
  width: 102vw;
  height:auto;
  background-color:black;
  color:black;
  position:absolute;
  top:430vh;
  left:0;
  right:0;
  text-align:center;
  border:solid black 10px;
}

#rowFiveContainer {
  background-color:white;
  height:auto;
}

#resumeBottom {
  margin-bottom:15px;
}

#resumeBottomImg {
  width:60%;
  margin-right:15%;
  float:right;
}
/*web projects*/
.webProjImg {
  width:250px;
  height:auto;
  margin:50px;
}

.webOverlay {
  position: fixed;
  bottom: 5%;
  left: 80%;
  right: 0;
  height: 300px;
  width: 150px;
  opacity: 0;
  transition: .5s ease;
  background-color: black;
}

#bernarooLink:hover .webOverlay {
  opacity: 1;
  transform: rotate(360deg);
}

#bootstrapPortLink:hover .webOverlay {
  opacity: 1;
  transform: rotate(360deg);
}

#responsivePortLink:hover .webOverlay {
  opacity: 1;
  transform: rotate(360deg);
}

#webAdvert {
  text-align:center;
  margin:auto;
  background-color:black;
  color:white;
  opacity:.8;
  padding:7px;
}

/*games and apps*/
#schoolProjects {
  position:absolute;
  top:50%;
  width:100%;
}

.projText {
  font-size: 50px;
  letter-spacing: 20px;
  padding-bottom:35px;
  padding-top:35px;
  font-weight: bold;
}

.gamesOverlay {
  position: absolute;
  top: -200%;
  bottom: 0;
  left: -30%;
  right: 0;
  height: 300px;
  width: 150px;
  opacity: 0;
  transition: .5s ease;
  background-color: black;
}

.text {
  font-family: 'Raleway', sans-serif;
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
  padding:3px;
  width:96%;
}

.gamesImg {
  width: 50px;
  height:auto;
}

.gamesArrowImg {
  width: 40px;
  height:auto;
}

#gameImgRow {
  margin-left:5%;
}

#vanGoghLink:hover .gamesOverlay {
  opacity: 1;
  transform: rotate(360deg);
}

#crystalLink:hover .gamesOverlay {
  opacity: 1;
  transform: rotate(-360deg);
}

#rpgLink:hover .gamesOverlay {
  opacity: 1;
  transform: rotate(360deg);
}

#triviaLink:hover .gamesOverlay {
  opacity: 1;
  transform: rotate(-360deg);
}

/*Design Page*/
#designRowOne {
  margin-top:10%;
}

.designHead {
  font-family: 'Roboto', sans-serif;
  font-weight: bold;
  font-size:40px;
  letter-spacing: 7px;
}

.card-container {
  height: 50vh;
}

.center-items {
  display: flex;
  align-items: center;
  justify-content: center;
}

.card {
  height: 15rem;
  width: 15rem;
  background-color:white;
  background-size: cover;
  cursor: pointer;
  border:none;
  background-blend-mode: overlay;
}

.designImg {
  height:90%;
  width:auto;
  margin-top:20%;
}

.posterText {
  font-family: 'Raleway', sans-serif;
  background-color: black;
  border: none;
  box-shadow: none;
  padding: 10px;
  color: white;
  opacity: 0;
  transition: opacity 0.5s ease-in-out,transform 0.5s ease-in-out;
  cursor: pointer;
}

.posterText:hover, .posterText:focus {
  background-color: darkgray;
}

.card:hover {
  background: rgba(0,0,0,0.5) white;
  background-size: cover;
  height:170%;
  width:auto;
  z-index:100;
}

.card:hover .posterText {
  transform: translateY(10px);
  opacity: 1;
}

/* Art Page*/
#artBackground {
  height:100vh;
  width:auto;
  position:fixed;
  top:0;
  z-index: 0;
}

#artPhilJumbo {
  font-family: 'Raleway', sans-serif;
  width:60%;
  height:100vh;
  background-color:white;
  z-index: 1;
  padding-top:10%;
  position:absolute;
  top:0;
  left:25%;
}

#artHeader {
  font-family: 'Roboto', sans-serif;
  font-weight:bold;
  font-size:40px;
}

#artRowTwo {
  width: 102vw;
  height:100vh;
  background-color:black;
  color:black;
  position:absolute;
  top:100vh;
  left:0;
  right:0;
  text-align:center;
  text-align: center;
}

#carouselJumbo {
  width:80%;
  background-color:white;
  height:80%;
}

.sr-only {
  color:black !important;
}

.img-fluid {
  margin:auto;
}

/* About page */
.aboutRow {
  width:80%;
  position:fixed;
  top:0;
  bottom:0;
  left:0;
  transform:rotate(-22deg);
}

.aboutBanners {
  background:black;
  color:white;
}

.aboutBtwnBanners {
  background:white;
}

.aboutTextBanners {
  text-orientation: sideways;
  word-wrap: break-word;
  text-align:justify;
  position:absolute;
  top:25%;
  font-size:16px;
  font-weight:bold;
}

.aboutIcons {
  width:70%;
  height:auto;
  position:absolute;
  top:35%;
}
.aboutOverlay {
  opacity: 0;
  transition: .5s ease;
  background-color: black;
  height: 40px;
  width: 700%;
  color:white;
  z-index:100;
  font-size:35px;
  font-weight: bold;
  letter-spacing: 10px;
}

#linkedOverlay {
  position: absolute;
  top:108%;
}

#linkedCol:hover #linkedOverlay {
  opacity: 1;
  transform: rotate(382deg);
}

#emailOverlay {
  position:absolute;
  top:102%;
  right: -65%;
}

#emailCol:hover #emailOverlay {
  opacity: 1;
  transform: rotate(382deg);
}

#gitOverlay {
  position:absolute;
  top:108%;
  left: 400%;
}

#gitCol:hover #gitOverlay {
  opacity: 1;
  transform: rotate(382deg);
}

#cultureOverlay {
  position:absolute;
  top:102%;
  left: 150%;
}

#cultureCol:hover #cultureOverlay {
  opacity: 1;
  transform: rotate(382deg);
}

#pageOverlay {
  position:absolute;
  top:92%;
  right:-200px;
}

#aboutCol:hover #pageOverlay {
  opacity: 1;
  transform: rotate(382deg);
}

/*culture fit*/
#arrows {
  width:100%;
  height:100%;
}

.cultureBlock {
  width: 60%;
  height:auto;
  position:absolute;
  top:10%;
  left:10%;
  color:black;
  background-color: white;
  font-family: 'Raleway', sans-serif;
  font-size: 20px;
}

.cultureHeading {
  font-family: 'Roboto', sans-serif !important;
  font-size:25px;
  font-weight: bold;
  letter-spacing: 12px;
  margin-bottom:15px;
}

.nextArrow {
  width:60px;
  height:auto;
  position:absolute;
  top:90%;
  left:90%;
}

.cultureBodyIcons {
  width:120px;
  height:auto;
  position:absolute;
  top:28%;
  left:118%;
}

#hiddenPets {
  width:80%;
  z-index:100;
}

.hiddenPetsImg {
  width:100%;
  height:auto;
}
/* ... */

